# python_transform_billing_data

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README.rst  billing_data.ipynb  example.env  main.py  pyproject.toml  requirements.txt  requirements_dev.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
